# inventory_cli

./: .gitignore  Cargo.toml
Config/: products.json
Database/: prod.db
src/: main.rs
src/functions/: Add_product.rs  add_product.rs  delete_product.rs  mod.rs  show_product.rs  validation_check.rs
