[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio"] }
rusqlite = "=0.32.1"
serde = "1.0.218"
serde_json = "1.0.139"
indicatif = "0.17.11"
log = "0.4.26"
rand = "0.8.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tabled = "0.18.0"